// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match the snapshot 1`] = `
<header
  className="header"
>
  <Link
    className="header__logo-group"
    replace={false}
    to="/"
  >
    <img
      alt="no phone calls"
      src="no-cellphone.svg"
    />
    <h1
      className="header__header"
    >
      Robo Report
    </h1>
  </Link>
  <nav
    className="header__nav"
  >
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      className="header__link header__link--home"
      exact={true}
      to="/"
    >
      HOME
    </NavLink>
    <button
      className="header__link header__link--sign-in-btn"
      onClick={[Function]}
    >
      SIGN IN
    </button>
  </nav>
</header>
`;

exports[`Header should match the snapshot 2`] = `
<header
  className="header"
>
  <Link
    className="header__logo-group"
    replace={false}
    to="/"
  >
    <img
      alt="no phone calls"
      src="no-cellphone.svg"
    />
    <h1
      className="header__header"
    >
      Robo Report
    </h1>
  </Link>
  <nav
    className="header__nav"
  >
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      className="header__link header__link--home"
      exact={true}
      to="/"
    >
      HOME
    </NavLink>
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      className="header__link header__link--reports-button"
      to="/myReports"
    >
      MY REPORTS
    </NavLink>
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      className="header__link"
      to="/myAccount"
    >
      MY ACCOUNT
    </NavLink>
  </nav>
</header>
`;
